--- a/app/blocks/layout-default/layout-default.jade
+++ b/app/blocks/layout-default/layout-default.jade
@@ -2,6 +2,12 @@ include /../node_modules/bemto.jade/bemto
 include /../node_modules/jade-injected/jade-injected
 include ../page/page
 include ../scripts/scripts
+include ../header/header
+include ../footer/footer
+include ../info-common/info-common
+include ../info-graduate/info-graduate
+include ../info-skills/info-skills
+include ../info-level/info-level
 
 doctype html
 html(lang='ru')
