--- a/app/blocks/info-skills/info-skills.jade
+++ b/app/blocks/info-skills/info-skills.jade
@@ -1,8 +1,8 @@
 mixin info-skills(data)
 	+b.info-skills&attributes(attributes)
-		+e.label Практические навыки
+		+e('label').title Практические навыки
 		+e.text
-			| Отметьте только те технологии и типы задач, с которыми вы хорошо знакомы. Отсутсвие опыта отнюдь не означает, что у вас меньше шансов стать нашим сотрудником. Это означает, что вы будете получать те задачи, с которыми гарантировано будете справляться.
+			| Отемтьте только те технологии и типы задач, с которыми вы хорошо знакомы. Отсутсвие опыта отнюдь не означает, что у вас меньше шансов стать нашим сотрудником. Это означает, что вы будете получать те задачи, с которыми гарантировано будете справляться.
 		+e.col
 			+e.UL.list
 				each item in data
