--- a/app/blocks/info-common/info-common.styl
+++ b/app/blocks/info-common/info-common.styl
@@ -1,11 +1,12 @@
 .info-common
+	margin-bottom 31px
 	&__list
 	&__list-item
 		clearfix()
-		margin-bottom 18px
+		margin-bottom 17px
 	&__label
 		float left
-		margin-top 20px
+		padding-top 20px
 	&__wrapper
 		display block
 		overflow hidden
@@ -20,6 +21,6 @@
 		padding-left 16px
 		border-style solid
 		border-width 0 0 3px
-		border-image url(../images/border.png) 0 0 3 0 stretch stretch
+		border-image url(../images/border.png) 0 0 4 0 stretch stretch
 
 	
