--- a/app/blocks/info-skills/info-skills.styl
+++ b/app/blocks/info-skills/info-skills.styl
@@ -1,2 +1,45 @@
 .info-skills
-	display block
+	margin-bottom 50px
+	&__title
+		margin-bottom 11px
+		display block
+	&__text
+		font-size 14px
+		line-height: 22px
+		letter-spacing 0 //- x3
+		word-spacing 0 //-x3
+		margin-bottom 10px
+		&:before
+			float left
+			content '*'
+			font-size 36px
+			//-line-height 50px
+			margin-right 6px
+			padding-bottom 30px
+			padding-top 9px
+	&__list
+		column-count 3
+		//-column-width 100px
+		column-gap 10px
+	&__list-item
+		padding-top 14px
+	&__label
+		display inline-block
+		position relative
+		font-size 21px
+		letter-spacing -0.1px
+	&__input
+		display none
+	&__input + label
+		padding-left 29px
+		&:before
+			content ''
+			position absolute
+			left 0
+			top -7px
+			display inline-block
+			sprite $checkbox_unchecked
+	&__input:checked + label
+		&:before
+			content ''
+			sprite $checkbox_checked
