--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -19,16 +19,17 @@ body
 
 .container-inner
     margin 0 auto
-    width 778px
+    width 782px
 
 .title
     &__img
         display block
         margin 28px auto
         margin-bottom 52px
-        padding-right 40px
+        padding-right 42px
 
 label
     font-family $regular-font
     font-size 22px
     font-weight 700
+    letter-spacing 0.01em
