--- a/app/blocks/info-skills/info-skills.styl
+++ b/app/blocks/info-skills/info-skills.styl
@@ -6,23 +6,27 @@
 	&__text
 		font-size 14px
 		line-height: 22px
-		letter-spacing 0 //- x3
-		word-spacing 0 //-x3
-		margin-bottom 10px
+		letter-spacing -0.05px
+		margin-bottom 9px
 		&:before
 			float left
 			content '*'
 			font-size 36px
-			//-line-height 50px
-			margin-right 6px
+			margin-right 7px
 			padding-bottom 30px
 			padding-top 9px
 	&__list
 		column-count 3
-		//-column-width 100px
-		column-gap 10px
+		//-column-width 150px
+		column-gap 1px
 	&__list-item
 		padding-top 14px
+		&:nth-child(n+8):nth-child(-n+13)
+			label
+				padding-left 26px
+		&:nth-child(n+14):nth-child(-n+18)
+			label
+				padding-left 26px
 	&__label
 		display inline-block
 		position relative
