block space in app.styl

--- a/app/blocks/info-common/info-common.styl
+++ b/app/blocks/info-common/info-common.styl
@@ -1,9 +1,8 @@
 .info-common
-	margin-bottom 31px
 	&__list
 	&__list-item
 		clearfix()
-		margin-bottom 17px
+		margin-bottom 17px //- !!! 17px for Chrome, 18px for PhantomJS
 	&__label
 		float left
 		padding-top 20px
