--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -33,3 +33,15 @@ label
     font-size 22px
     font-weight 700
     letter-spacing 0.01em
+
+/* Block space */
+.info-common
+    margin-bottom 31px
+.info-graduate
+    margin-bottom 49px
+.info-skills
+    margin-bottom 82px
+.info-level
+    margin-bottom 180px
+.footer
+    margin-bottom 150px
