--- a/app/blocks/info-common/info-common.styl
+++ b/app/blocks/info-common/info-common.styl
@@ -2,7 +2,7 @@
 	&__list
 	&__list-item
 		clearfix()
-		margin-bottom 17px //- !!! 17px for Chrome, 18px for PhantomJS
+		margin-bottom 18px //- !!! 17px for Chrome, 18px for PhantomJS
 	&__label
 		float left
 		padding-top 20px
@@ -16,10 +16,12 @@
 		font-size 30px
 		width 100%
 		background none
-		padding-bottom 8px
-		padding-left 16px
+		padding-bottom 3px
+		padding-left 14px
 		border-style solid
-		border-width 0 0 3px
-		border-image url(../images/border.png) 0 0 4 0 stretch stretch
+		border-width 0 0 7px
+		border-image-source url("../images/border.png");
+		border-image-slice 7
+		border-image-repeat  stretch
 
 	
