--- a/app/blocks/header/header.jade
+++ b/app/blocks/header/header.jade
@@ -1,7 +1,7 @@
 mixin header()
 	+b('header').header&attributes(attributes)
 		+e.logo
-			+e.link(href="#")
+			+e.link(href="http://csssr.ru" target="_blank")
 				+e.img(src="assets/images/logo.png" alt="CSSSR"  title="CSSSR")
 			+e.text Секретный архив учреждения
 		+e.stamp
