--- a/app/blocks/info-level/info-level.styl
+++ b/app/blocks/info-level/info-level.styl
@@ -1,3 +1,34 @@
 .info-level
 	&__title
 		margin-left 10px
+	.slider
+		position relative
+		top 17px
+		sprite $line
+		margin-left 8px
+		&__label
+			position absolute
+			font-size 13px
+			font-weight 700
+			max-width 210px
+			top 58px
+			margin-left -3px
+			cursor pointer
+			&:before
+				content ''
+				position absolute
+				sprite $devider_short
+				top -29px
+				left -4px
+			&:first-child
+				margin-left 4px
+				&:before
+					sprite $devider_long
+					left -6px
+			&:last-child
+				margin-right -5px
+				&:before
+					left initial
+					right -8px
+					sprite $devider_long
+				
