--- a/app/blocks/page/page.jade
+++ b/app/blocks/page/page.jade
@@ -10,6 +10,6 @@ mixin page()
 					+info-common(getData("info-common"))
 					+info-graduate
 					+info-skills(getData("info-skills"))
-					+info-level
+					+info-level(getData("info-level"))
 					+footer
 		block
