--- a/app/blocks/info-level/info-level.styl
+++ b/app/blocks/info-level/info-level.styl
@@ -12,11 +12,14 @@
 			top 10px
 			left 20%
 			margin-left -6px
+			transition none
+			cursor pointer
 		&__label
 			position absolute
 			font-size 13px
 			font-weight 700
-			max-width 210px
+			line-height 18px
+			max-width 170px
 			top 58px
 			margin-left -3px
 			cursor pointer
