--- a/app/blocks/footer/footer.styl
+++ b/app/blocks/footer/footer.styl
@@ -1,2 +1,18 @@
 .footer
-	display block
+	.completion-date
+		&__label
+			float left
+			margin-top 20px
+			margin-right 6px
+		&__input
+			font-family "Courier New"
+			font-size 30px
+			background none
+			width 206px
+			padding-bottom 0px
+			padding-left 9px
+			border-style solid
+			border-width 0 0 7px
+			border-image-source url("../images/border.png");
+			border-image-slice 7
+			border-image-repeat  stretch
