--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -42,6 +42,6 @@ label
 .info-skills
     margin-bottom 82px
 .info-level
-    margin-bottom 117px
-.footer
-    margin-bottom 150px
+    margin-bottom 97px
+.completion-date
+    padding-bottom 78px
