--- a/app/blocks/footer/footer.jade
+++ b/app/blocks/footer/footer.jade
@@ -1,6 +1,6 @@
 mixin footer()
-	+b('footer')&attributes(attributes)
+	+b.footer&attributes(attributes)
 		+b.completion-date
-			+e.label(for="date") Дата заполнения
-			+e('input').input(id="date" type="text" value="25.07.2016")
+			+e.label(for="date") Дата заполенения
+			+e('input').input(id="date" type="text" value="01.01.2014")
 		block
